@@ -14,7 +14,7 @@ subjectProfileEventPlot(data, paramVar,
   subsetVar = NULL, subsetValue = NULL, xLab = getLabelVar(timeVar,
   labelVars = labelVars), yLab = "", timeLim = NULL,
   title = paramLab, label = title, labelVars = NULL,
-  formatReport = subjectProfileReportFormat())
+  formatReport = subjectProfileReportFormat(), paging = TRUE)
 }
 \arguments{
 \item{data}{data.frame with data}
@@ -68,6 +68,9 @@ in the text when the plots are combined (e.g. if the plot is empty).}
 
 \item{formatReport}{list with parameters used to specify the format of the report,
 e.g. output of the \code{\link{subjectProfileReportFormat}} function}
+
+\item{paging}{Logical, if TRUE (by default), the automatic 
+paging is enabled, otherwise only one page is used.}
 }
 \value{
 list of (across subjects) of list (across modules) of \code{\link[ggplot2]{ggplot2} objects}, 
