@@ -9,6 +9,7 @@
     o additional messages for verbose
     o enable parallelized computations with 'nCores'
     o createSubjectProfileReport: subjectSubset fix
+    o 'paging' parameter: enable export into one page
 0.1.0
     o example datasets moved to the glpgUtilityFct package
     o getGLPGColorPalettePatientProfile/getGLPGLinetypePalettePatientProfile
